--- a/java_script_mini_project/styles_mini_project.css
+++ b/java_script_mini_project/styles_mini_project.css
@@ -19,18 +19,21 @@ body {
 .userBlock {
     padding: 5px;
     width: 40%;
-    color: #e5900c;
+    color: blue;
     border: silver solid 1px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background-color: lightsalmon;
 }
 
 .btn {
-    width: 100%;
+    width: 200px;
+    height: 30px;
     display: block;
     margin: 5px;
+    font-size: 16px;
 }
 
 a {
