--- a/java_script_mini_project/styles_user_details.css
+++ b/java_script_mini_project/styles_user_details.css
@@ -14,6 +14,7 @@ body {
     margin: 10px;
     font-family: Arial sans-serif;
     background-color: lightyellow;
+    padding: 10px;
 }
 
 .btnPostTitles {
