--- a/style.css
+++ b/style.css
@@ -1,9 +1,80 @@
 * {
-    font-family: 'Poppins', sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 nav {
+    font-family: 'Poppins', sans-serif;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    min-height: 8vh;
+    background-color: #957DAD;
+}
+
+.navList {
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    width: 40%;
+    letter-spacing: 1px;
+}
+
+.navList a {
+    text-decoration: none;
+    color: black;
+}
+
+.navList a. {
+    color: yellow;
+}
+
+
+.logo {
+    text-transform: uppercase;
+    font-size: 24px;
+    letter-spacing: 4px;
+}
+
+.burger div {
+    background-color: #ffffff;
+    width: 25px;
+    height: 3px;
+    margin: 5px;
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        overflow-x: hidden;
+    }
+    .navList {
+        position: absolute;
+        right: 0;
+        height: 92vh;
+        top: 8vh;
+        background-color: #957DAD;
+        letter-spacing: 1px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    }
+
+    .burger {
+        display: block;
+    }
+
+    .navList li {
+        opacity: 0;
+    }
+}
+
+.burger {
+    cursor: pointer;
+}
+
+.nav-active {
+    transform: translateX(0);
 }
